fixed alignment issues

--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ body {
 
 .comments-container {
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   flex-direction: column;
 }
 
@@ -150,6 +150,7 @@ body {
   width: 90%;
   min-width: 250px;
   margin: 1rem 0;
+  align-self: flex-end;
 }
 
 .reply-container > :last-child {
